[profile.dev]
lto = true
opt-level = 3
panic = "abort"
codegen-units = 1

[profile.release]
lto = true
opt-level = 3
panic = "abort"
codegen-units = 1


[package]
name = "emul"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "0.33.0"
winit = "0.28.7"
image = { version = "*", optional = true }
clippy = { version = "*", optional = true }
